# CvT-Transfer-Learning

./: pyproject.toml  train-MNIST.ipynb
lib/models/: cls_cvt.py
