[project]
name = "cvt"
version = "0.1.0"
description = ""
authors = [
    {name = "roger",email = "minseungkim1017@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "json-tricks (>=3.17.3,<4.0.0)",
    "yacs (>=0.1.8,<0.2.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "tensorboardx (>=2.6.4,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "ptflops (>=0.7.4,<0.8.0)",
    "timm (>=1.0.19,<2.0.0)",
    "einops (>=0.8.1,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
